<PreferenceScreen
        xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/preference_title_application">
        <ListPreference
                android:key="@string/label_setting_language"
                android:title="@string/label_setting_language"
                android:entries="@array/language_entries"
                android:entryValues="@array/language_entry_values"
                android:dialogTitle="@string/label_dialog_title_language"/>
    </PreferenceCategory>

    <PreferenceCategory android:title="@string/preference_title_information">
        <PreferenceScreen
                android:title="@string/label_setting_licence"
                android:key="@string/label_setting_licence"
                android:summary="@string/label_setting_licence_summary"/>

        <PreferenceScreen
                android:title="@string/label_setting_version"
                android:key="@string/label_setting_version"/>
    </PreferenceCategory>

</PreferenceScreen>